# pypi-package-stats

./: .gitattributes  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: CI-CD.yaml  bigquery-executor.yaml  datadog-deploy-event.yaml  deploy.yaml  pypi-analysis.yaml  test_pypi-analysis.yaml
.github/workflows/scripts/: send-datadog-event.sh
src/: __main__.py  main.py  pyproject.toml
src/adapter/: bigquery_adapter.py  datadog_adapter.py  metrics.py  secret_manager.py  secret_manager_adapter.py
src/application/: __main__.py
src/application/ports/: datawarehouse_interface.py  metrics.py  metrics_interface.py  secret_manager_interface.py
src/application/services/: dw_query_execute_service.py  dw_service.py  get_data_from_dw_service.py  get_secret_value_service.py  send_metrics_service.py
src/application/use_cases/: get_secrets.py  send_metrics_use_case.py
src/application/utils/: log_level_settings.py  logger_module.py
src/pypi/: pypi_analysis.sql  runner.sh
