[tool.poetry]
name = "bigquery-execute"
version = "v1.0.0"
description = "SQL scripts for execution in personal BigQuery projects."
authors = ["IvanildoBarauna <ivanildo.jnr@outlook.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"