[tool.poetry]
name = "pypi-package-stats"
version = "0.1.0"
description = ""
authors = ["Ivanildo Barauna de Souza Junior <ivanildo.jnr@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
